--- a/contact.html
+++ b/contact.html
@@ -5,30 +5,34 @@
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">  
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
-
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
     <link rel="stylesheet" href="css/lightgallery.min.css">
-
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
     <link rel="stylesheet" href="css/swiper.css">
-
     <link rel="stylesheet" href="css/aos.css">
-
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,400italic,300italic,300|Raleway:300,400,600' rel='stylesheet' type='text/css'>
+  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/indx.css">
+	<link rel="stylesheet" href="css/second.css" type="text/css" media="all">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/faa-animation.css"> 
+  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  	<link rel="stylesheet" type="text/css" href="plugins/aos.css">
+  	<link rel="stylesheet" type="text/css" href="css/navu.css">
+  	<script src="plugins/aos.js"></script>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -182,10 +186,16 @@
                                     <p class="mb-4">TPC Cell,401, B Block , Birla Vishwakarma Mahavidhyalaya</p>
 
                                     <p class="mb-0 font-weight-bold">Phone</p>
-                                    <p class="mb-4"><a href="#">+9714094823</a></p>
+                                    <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
+                                    <img class="mdl-chip__contact" src="images/1%20(11).png"></img>
+                                    <span class="mdl-chip__text"><a href="#">9714094823</a></span>
+                                    </span>
 
                                     <p class="mb-0 font-weight-bold">Email Address</p>
-                                    <p class="mb-0"><a href="#">bvmtpc2020@gmail.com</a></p>
+                                    <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
+                                    <img class="mdl-chip__contact" src="images/1%20(11).png"></img>
+                                    <span class="mdl-chip__text"><a href="#">bvmtpc2020@gmail.com</a></span>
+                                    </span>
 
                                 </div>
 
