--- a/single.html
+++ b/single.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
     <link rel="stylesheet" href="css/lightgallery.min.css">
-
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
     <link rel="stylesheet" href="css/swiper.css">
-
     <link rel="stylesheet" href="css/aos.css">
-
     <link rel="stylesheet" href="css/style.css">
-
 </head>
-
 <body>
-
     <div class="site-wrap">
-
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -41,46 +28,36 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-
-
-
-
         <header class="site-navbar py-3 border-bottom" role="banner">
-
             <div class="container-fluid">
                 <div class="row align-items-center">
-
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
-
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="single.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">Event1</a></li>
-                                        <li><a href="#">Event2</a></li>
-                                        <li><a href="#">Event3</a></li>
-                                        <li><a href="#">Event4</a></li>
-                                        <li><a href="#">Event5</a></li>
-                                        <li><a href="#">Event6</a></li>
-                                        <li><a href="#">Event7</a></li>
-                                        <li class="has-children">
-                                            <a href="#">Sub Menu</a>
-                                            <ul class="dropdown">
-                                                <li><a href="#">Menu One</a></li>
-                                                <li><a href="#">Menu Two</a></li>
-                                                <li><a href="#">Menu Three</a></li>
-                                            </ul>
-                                        </li>
+                                        <li><a href="#">Cribado</a></li>
+                                        <li><a href="#">Accentus</a></li>
+                                        <li><a href="#">Alh ar'ray</a></li>
+                                        <li><a href="#">Segacite</a></li>
+                                        <li><a href="#">Vyaktitvam</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="services.html">Results</a></li>
+                                <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
-                                <li><a href="contact.html">Contact US</a></li>
+                                <li class="has-children">
+                                    <a href="#">Contact</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Event Query</a></li>
+                                        <li><a href="#">Developers</a></li>
+                                        <li><a href="#">US</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -101,23 +78,14 @@
                                 </li>
                             </ul>
                         </div>
-
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-
                     </div>
-
                 </div>
             </div>
-
         </header>
-
-
-
         <div class="site-section" data-aos="fade">
             <div class="container-fluid">
-
                 <div class="row justify-content-center">
-
                     <div class="col-md-7">
                         <div class="row mb-5">
                             <div class="col-12 ">
@@ -125,11 +93,9 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="site-section" data-aos="fade">
                     <div class="container-fluid">
-
                         <div class="row justify-content-center">
                             <div class="col-md-7">
                                 <div class="row mb-5">
@@ -162,7 +128,6 @@
                                             <p><strong class="font-weight-bold text-primary">40 Rs.</strong></p>
                                         </div>
                                     </div>
-
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
@@ -187,7 +152,6 @@
                                             <p><strong class="font-weight-bold text-primary">15 Rs.</strong></p>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -310,19 +274,10 @@
                     <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_1.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem tempora deleniti, consectetur quisquam labore vitae quod quae debitis hic ab!</p>">
                         <a href="#"><img src="images/nature_small_1.jpg" alt="IMage" class="img-fluid"></a>
                     </div>
-
+--->
+                    </div>
                 </div>
             </div>
-        </div>
---->
-
-
-
-
-
-
-            </div>
-
             <script src="js/jquery-3.3.1.min.js"></script>
             <script src="js/jquery-migrate-3.0.1.min.js"></script>
             <script src="js/jquery-ui.js"></script>
@@ -335,20 +290,14 @@
             <script src="js/bootstrap-datepicker.min.js"></script>
             <script src="js/swiper.min.js"></script>
             <script src="js/aos.js"></script>
-
             <script src="js/picturefill.min.js"></script>
             <script src="js/lightgallery-all.min.js"></script>
             <script src="js/jquery.mousewheel.min.js"></script>
-
             <script src="js/main.js"></script>
-
             <script>
                 $(document).ready(function() {
                     $('#lightgallery').lightGallery();
                 });
-
             </script>
-
 </body>
-
 </html>
