Added photos related to my website
Nothing more than this.

--- a/Admin/Admin login.html
+++ b/Admin/Admin login.html
@@ -1,33 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Admin Login</title>
-	<meta charset="UTF-8">
+    <title>KnowHow'19 &mdash;Try Now To know how.</title>
+    <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../fonts/icomoon/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/jquery-ui.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/lightgallery.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="../css/swiper.css">
+    <link rel="stylesheet" href="../css/aos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-	
-	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<div class="login100-pic js-tilt" data-tilt>
-					<img src="images/img-01.png" alt="IMG">
-				</div>
-
-				<form class="login100-form" name="myForm" method="post" action="login.php">
-					<b><span class="login100-form-title">
-						ADMIN LOGIN
-					</span></b>
-
-					<div class="wrap-input100 validate-input">
+    <div class="site-wrap">
+        <div class="site-mobile-menu">
+            <div class="site-mobile-menu-header">
+                <div class="site-mobile-menu-close mt-3">
+                    <span class="icon-close2 js-menu-toggle"></span>
+                </div>
+            </div>
+            <div class="site-mobile-menu-body"></div>
+        </div>
+        <header class="site-navbar py-3 border-bottom" role="banner">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-6 col-xl-2" data-aos="fade-down">
+                        <h1 class="mb-0"><a href="Admin/Admin%20login.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                    </div>
+                    <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
+                        <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
+                            <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
+                                <li class="active"><a href="index.html">Home</a></li>
+                                <li class="has-children">
+                                    <a href="single.html">Events</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Cribado</a></li>
+                                        <li><a href="#">Accentus</a></li>
+                                        <li><a href="#">Alh ar'ray</a></li>
+                                        <li><a href="#">Segacite</a></li>
+                                        <li><a href="#">Vyaktitvam</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="Results.html">Results</a></li>
+                                <li><a href="about.html">About US</a></li>
+                                <li class="has-children">
+                                            <a href="#">Contact</a>
+                                            <ul class="dropdown">
+                                                <li><a href="#">Event Query</a></li>
+                                                <li><a href="#">Developers</a></li>
+                                                <li><a href="#">US</a></li>
+                                            </ul>
+                                        </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
+                        <div class="d-none d-xl-inline-block">
+                            <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
+                                <li>
+                                    <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class="col-md-7">
+            <div class="row mb-5">
+                <div class="col-12 ">
+                    <h2 class="site-section-heading text-center">Hey Admin, Login Na</h2>
+				<form name="myForm" method="post" action="login.php" >
+					<div class="wrap-input100 validate-input" align="center">
 						<input class="input100" type="text" name="email" placeholder="User Name" required>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 					</div>
-
 					<div class="wrap-input100 validate-input" required>
 						<input class="input100" type="password" name="pass" placeholder="Password" required>
 						<span class="focus-input100"></span>
@@ -35,13 +107,34 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
-					
 					<div class="container-login100-form-btn">
 						<input type="submit" name="LOGIN" class="login100-form-btn"/>
 					</div>
 				</form>
-			</div>
-		</div>
-	</div>	
+			    </div>
+                </div>
+            </div>
+        </div>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../js/jquery-ui.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/jquery.stellar.min.js"></script>
+    <script src="../js/jquery.countdown.min.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/bootstrap-datepicker.min.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/aos.js"></script>
+    <script src="../js/picturefill.min.js"></script>
+    <script src="../js/lightgallery-all.min.js"></script>
+    <script src="../js/jquery.mousewheel.min.js"></script>
+    <script src="../js/main.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#lightgallery').lightGallery();
+        });
+    </script>
 </body>
 </html>
