--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>KccnowHow'19 &mdash;Try Now To know how.</title>
+    <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -54,11 +54,11 @@
                                 <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
                                 <li class="has-children">
-                                            <a href="#">Contact</a>
+                                            <a href="to.html">Contact</a>
                                             <ul class="dropdown">
-                                                <li><a href="#">Event Query</a></li>
-                                                <li><a href="#">Developers</a></li>
-                                                <li><a href="#">US</a></li>
+                                                <li><a href="evco.html">Event Co-ordinators</a></li>
+                                                <li><a href="dev.html">Developers</a></li>
+                                                <li><a href="contact.html">Send Query</a></li>
                                             </ul>
                                         </li>
                             </ul>
