--- a/single.html
+++ b/single.html
@@ -51,12 +51,12 @@
                                 <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
                                 <li class="has-children">
-                                    <a href="#">Contact</a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Event Query</a></li>
-                                        <li><a href="#">Developers</a></li>
-                                        <li><a href="#">US</a></li>
-                                    </ul>
+                                    <a href="to.html">Contact</a>
+                                            <ul class="dropdown">
+                                                <li><a href="evco.html">Event Co-ordinators</a></li>
+                                                <li><a href="dev.html">Developers</a></li>
+                                                <li><a href="contact.html">Send Query</a></li>
+                                            </ul>
                                 </li>
                             </ul>
                         </nav>
