--- a/about.html
+++ b/about.html
@@ -1,42 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
     <link rel="stylesheet" href="css/lightgallery.min.css">
-
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
     <link rel="stylesheet" href="css/swiper.css">
-
     <link rel="stylesheet" href="css/aos.css">
-
     <link rel="stylesheet" href="css/style.css">
-
 </head>
-
 <body>
-
     <div class="site-wrap">
-
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -45,50 +31,39 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-
-
-
-
         <header class="site-navbar py-3 border-bottom" role="banner">
-
             <div class="container-fluid">
                 <div class="row align-items-center">
-
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
-
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="single.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">Event1</a></li>
-                                        <li><a href="#">Event2</a></li>
-                                        <li><a href="#">Event3</a></li>
-                                        <li><a href="#">Event4</a></li>
-                                        <li><a href="#">Event5</a></li>
-                                        <li><a href="#">Event6</a></li>
-                                        <li><a href="#">Event7</a></li>
-                                        <li class="has-children">
-                                            <a href="#">Sub Menu</a>
-                                            <ul class="dropdown">
-                                                <li><a href="#">Menu One</a></li>
-                                                <li><a href="#">Menu Two</a></li>
-                                                <li><a href="#">Menu Three</a></li>
-                                            </ul>
-                                        </li>
+                                        <li><a href="#">Cribado</a></li>
+                                        <li><a href="#">Accentus</a></li>
+                                        <li><a href="#">Alh ar'ray</a></li>
+                                        <li><a href="#">Segacite</a></li>
+                                        <li><a href="#">Vyaktitvam</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="services.html">Results</a></li>
+                                <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
-                                <li><a href="contact.html">Contact US</a></li>
+                                <li class="has-children">
+                                    <a href="to.html">Contact</a>
+                                            <ul class="dropdown">
+                                                <li><a href="evco.html">Event Co-ordinators</a></li>
+                                                <li><a href="dev.html">Developers</a></li>
+                                                <li><a href="contact.html">Send Query</a></li>
+                                            </ul>
+                                </li>
                             </ul>
                         </nav>
                     </div>
-
                     <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -106,21 +81,13 @@
                                 </li>
                             </ul>
                         </div>
-
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-
                     </div>
-
                 </div>
             </div>
-
         </header>
-
-
-
         <div class="" data-aos="fade">
             <div class="container-fluid">
-
                 <div class="row justify-content-center">
                     <div class="col-md-7">
                         <div class="row mb-5 site-section">
@@ -128,7 +95,6 @@
                                 <h2 class="site-section-heading text-center">About Us</h2>
                             </div>
                         </div>
-
                         <div class="row mb-5">
                             <div class="col-md-7">
                                 <img src="images/img_2.jpg" alt="Images" class="img-fluid">
@@ -138,8 +104,6 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus, ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
                             </div>
                         </div>
-
-
                         <div class="row site-section">
                             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
                                 <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
@@ -173,18 +137,10 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
-
-
-
-
-
-
     </div>
-
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
@@ -197,20 +153,14 @@
     <script src="js/bootstrap-datepicker.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/aos.js"></script>
-
     <script src="js/picturefill.min.js"></script>
     <script src="js/lightgallery-all.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
-
     <script src="js/main.js"></script>
-
     <script>
         $(document).ready(function() {
             $('#lightgallery').lightGallery();
         });
-
     </script>
-
 </body>
-
 </html>
