Added new Pages
Eventwise Pages Were added

--- a/Admin/Admin login.html
+++ b/Admin/Admin login.html
@@ -44,23 +44,23 @@
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li class="has-children">
-                                    <a href="single.html">Events</a>
+                                    <a href="../single.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">Cribado</a></li>
-                                        <li><a href="#">Accentus</a></li>
-                                        <li><a href="#">Alh ar'ray</a></li>
-                                        <li><a href="#">Segacite</a></li>
-                                        <li><a href="#">Vyaktitvam</a></li>
+                                        <li><a href="../cribado.html">Cribado</a></li>
+                                        <li><a href="../accentus.html">Accentus</a></li>
+                                        <li><a href="../ahlarry.html">Alh ar'ray</a></li>
+                                        <li><a href="../segacite.html">Segacite</a></li>
+                                        <li><a href="../vyakti.html">Vyaktitvam</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Results.html">Results</a></li>
-                                <li><a href="about.html">About US</a></li>
+                                <li><a href="../Results.html">Results</a></li>
+                                <li><a href="../about.html">About US</a></li>
                                 <li class="has-children">
-                                            <a href="#">Contact</a>
+                                            <a href="../contact.html">Contact</a>
                                             <ul class="dropdown">
                                                 <li><a href="#">Event Query</a></li>
                                                 <li><a href="#">Developers</a></li>
-                                                <li><a href="#">US</a></li>
+                                                <li><a href="../contact.html">US</a></li>
                                             </ul>
                                         </li>
                             </ul>
