--- a/New folder/events.html
+++ b/New folder/events.html
@@ -4,8 +4,12 @@
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <link rel="icon" type="image/ico" href="images/logo.png" />
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -18,24 +22,6 @@
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        @media screen and (max-width: 768px) {
-            #menu-toggle:checked+.nav-menu {
-                display: block;
-            }
-        }
-
-        .hero-body>.container {
-            padding: 0 10px;
-        }
-
-    </style>
 </head>
 
 <body>
@@ -71,7 +57,6 @@
                                 </li>
                                 <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
-                                <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -87,10 +72,10 @@
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                                 <li>
-                                    <a href="https://www.facebook.com/bvmcollegetpc" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                                    <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.instagram.com/bvmtpc/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                                 </li>
                             </ul>
                         </div>
@@ -99,97 +84,81 @@
                 </div>
             </div>
         </header>
-
-
-       <div class="site-section" data-aos="fade">
+         <div class="site-section" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-7">
                         <div class="row mb-5">
                             <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">Contact Us</h2>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-8 mb-5">
-                                <form action="#">
-                                    <div class="row form-group">
-                                        <div class="col-md-6 mb-3 mb-md-0">
-                                            <label class="text-black" for="fname">First Name</label>
-                                            <input type="text" id="fname" class="form-control">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <label class="text-black" for="lname">Last Name</label>
-                                            <input type="text" id="lname" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <label class="text-black" for="email">Email</label>
-                                            <input type="email" id="email" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <label class="text-black" for="subject">Subject</label>
-                                            <input type="subject" id="subject" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <label class="text-black" for="message">Message</label>
-                                            <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-lg-3 ml-auto">
-                                <div class="mb-3 bg-white">
-                                    <p class="mb-0 font-weight-bold">Address</p>
-									<p class="mb-0">Training & Placement Cell - BVM</p>
-                                    <p class="mb-4">   4th Floor,B-Block,
-															Birla Vishvakarma Mahavidyalaya,
-															Vallabh Vidyanagar,Anand,
-															Gujarat 388120, India</p>
-                                    <p class="mb-0 font-weight-bold">Phone</p>
-                                    <p class="mb-4"><a href="#">+9714094823</a></p>
-                                    <p class="mb-0 font-weight-bold">Email Address</p>
-                                    <p class="mb-0"><a href="gmail.com">bvmtpc2020@gmail.com</a></p>
-									<div class="mapouter">
-									<section id="contact" class="map">
-									<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></iframe>
-									<br />
-									<small>
-										<a href="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></a>
-									</small>
-									</section><style>.mapouter{text-align:right;height:100%;width:100%;}.map {overflow:hidden;background:none!important;height:100%;width:100%;}</style>
-									</div>
-								</div>
+                                <h2 class="site-section-heading text-center">Events</h2>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-       <div class="footer py-4">
-            <div class="container-fluid text-center">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                    <script>
-                        document.write(new Date().getFullYear());
-
-                    </script> Developed by Assassin007 with <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-            </div>
-        </div>
-
+                <div class="site-section" data-aos="fade">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-md-7">
+                                <div class="row mb-5">
+                                    <div class="col-12 ">
+                                        <h5 class="site-section-heading text-center">Enter The Competition</h5>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Ahl ar-Ra'y</h3>
+                                            <p>“People of Opinion”.A compromise where nobody is looser</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Vyaktitvam</h3>
+                                            <p>"Eveything you need to learn is within"</p>
+                                            <p><strong class="font-weight-bold text-primary">30 ₹</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Accentus</h3>
+                                            <p>“Why so serious?”</p>
+                                            <p><strong class="font-weight-bold text-primary">20 ₹</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Segacite</h3>
+                                            <p>“Because the cover of the book matters!”</p>
+                                            <p><strong class="font-weight-bold text-primary">20 Rs.</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-eiffel-tower display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Cribado</h3>
+                                            <p>“Welcome to the Corporate World”</p>
+                                            <p><strong class="font-weight-bold text-primary">35 Rs.</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Ms. KnowHow and Mr. Knowhow</h3>
+                                            <p>“Are you a class apart ?”</p>
+                                            <p><strong class="font-weight-bold text-primary">15 Rs.</strong></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
