--- a/msmr.html
+++ b/msmr.html
@@ -99,84 +99,61 @@
                 </div>
             </div>
         </header>
-
-
-       <div class="site-section" data-aos="fade">
+        <!-- GRID SYSTEM -->
+                  <div class="site-section" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-7">
                         <div class="row mb-5">
                             <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">Contact Us</h2>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-8 mb-5">
-                                <form action="#">
-                                    <div class="row form-group">
-                                        <div class="col-md-6 mb-3 mb-md-0">
-                                            <label class="text-black" for="fname">First Name</label>
-                                            <input type="text" id="fname" class="form-control">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <label class="text-black" for="lname">Last Name</label>
-                                            <input type="text" id="lname" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <label class="text-black" for="email">Email</label>
-                                            <input type="email" id="email" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <label class="text-black" for="subject">Subject</label>
-                                            <input type="subject" id="subject" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <label class="text-black" for="message">Message</label>
-                                            <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-md-12">
-                                            <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-lg-3 ml-auto">
-                                <div class="mb-3 bg-white">
-                                    <p class="mb-0 font-weight-bold">Address</p>
-									<p class="mb-0">Training & Placement Cell - BVM</p>
-                                    <p class="mb-4">   4th Floor,B-Block,
-															Birla Vishvakarma Mahavidyalaya,
-															Vallabh Vidyanagar,Anand,
-															Gujarat 388120, India</p>
-                                    <p class="mb-0 font-weight-bold">Phone</p>
-                                    <p class="mb-4"><a href="#">+9714094823</a></p>
-                                    <p class="mb-0 font-weight-bold">Email Address</p>
-                                    <p class="mb-0"><a href="gmail.com">bvmtpc2020@gmail.com</a></p>
-									<div class="mapouter">
-									<section id="contact" class="map">
-									<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></iframe>
-									<br />
-									<small>
-										<a href="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></a>
-									</small>
-									</section><style>.mapouter{text-align:right;height:100%;width:100%;}.map {overflow:hidden;background:none!important;height:100%;width:100%;}</style>
-									</div>
-								</div>
+                                <h2 class="site-section-heading text-center">Ms/Mr KnowHow</h2>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-       <div class="footer py-4">
+                <div class="site-section" data-aos="fade">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-md-7">
+                                <div class="row mb-5">
+                                    <div class="col-12 ">
+                                        <h5 class="site-section-heading text-center">“Are you a class apart ?”</h5>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Event1</h3>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
+                                            <p><strong class="font-weight-bold text-primary">20 Rs.</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Event2</h3>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
+                                            <p><strong class="font-weight-bold text-primary">30 Rs.</strong></p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Event3</h3>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
+                                            <p><strong class="font-weight-bold text-primary">40 Rs.</strong></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    </div>
+                </div>
+
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
